[package]
name = "ic-event-hub-macros-test"
version = "0.1.0"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
ic-cdk = "0.3.3"
ic-cdk-macros = "0.3.3"
serde = "1.0.126"
ic-event-hub = { path = "../ic-event-hub" }
ic-event-hub-macros = { path = "../ic-event-hub-macros" }