[package]
name = "ic-event-hub-macros"
version = "0.1.9"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2018"
description = "Event-based pub/sub for IC canisters"
keywords = ["events", "pubsub", "internet-computer", "dfinity"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/seniorjoinu/ic-event-hub"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
syn = "1.0.73"
quote = "1.0.9"
proc-macro2 = "1.0.27"