[package]
name = "ic-event-hub"
version = "0.1.9"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2018"
description = "Event-based pub/sub for IC canisters"
keywords = ["events", "pubsub", "internet-computer", "dfinity"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/seniorjoinu/ic-event-hub"

[dependencies]
ic-cdk = "0.3.1"
serde = "1.0.126"
union-utils = "0.1.3"