[package]
name = "ic-event-hub"
version = "0.2.0"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2018"
description = "Event-based pub/sub for IC canisters"
keywords = ["events", "pubsub", "internet-computer", "dfinity"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/seniorjoinu/ic-event-hub"

[dependencies]
ic-cdk = "0.3.2"
candid = { path = "../../candid/rust/candid" }
serde = "1.0.126"
futures = "0.3.19"
leb128 = "0.2.5"