[package]
name = "ic-event-hub-test"
version = "0.1.0"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2018"

[dependencies]
ic-cdk = "0.3.0"
ic-cdk-macros = "0.3.0"
serde = "1.0.126"
ic-event-hub = { path = "../ic_event_hub" }
ic-event-hub-macros = { path = "../ic_event_hub_macros" }