[package]
name = "emitter-counter"
version = "0.1.0"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "actor.rs"

[dependencies]
ic-cdk = "0.3.3"
ic-cdk-macros = "0.3.3"
serde = "1.0.126"
ic-event-hub = { path = "../../../ic-event-hub-rs/ic-event-hub" }
ic-event-hub-macros = { path = "../../../ic-event-hub-rs/ic-event-hub-macros" }