[package]
name = "emitter"
version = "0.1.0"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "actor.rs"

[dependencies]
ic-cdk = "0.4.0"
ic-cdk-macros = "0.4.0"
candid = "0.7.12"
serde = "1.0.126"
ic-event-hub = { path = "../../../ic-event-hub-rs/ic-event-hub" }
ic-event-hub-macros = { path = "../../../ic-event-hub-rs/ic-event-hub-macros" }